--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -36,4 +36,4 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
 
     - name: Build
-      run: mix compile
+      run: mix deps.get && mix compile
